# formulas_bot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  formatters.sh
.github/workflows/: build.yml  linters.yml
include/: Control_element.cpp  Control_element.h  Formula.cpp  Formula.h  Subject.cpp  Subject.h  constants.h  db_utils.h  group.h  group_tasks.cpp  state.h  state_utils.h  utils.h
include/models/: group.cpp  group.h
src/: Subject.cpp  Subject.h  main.cpp
tests/: example_test.cpp
